fix UAT findcourse - close #117

--- a/UAT/B6115708_Test_Case 2.html
+++ b/UAT/B6115708_Test_Case 2.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
 	<meta content="text/html; charset=UTF-8" http-equiv="content-type" />
-	<title>FindCourse test suit</title>
+	<title>B6115708_Test_Case 2</title>
 </head>
 <body>
 <table cellpadding="1" cellspacing="1" border="1">
@@ -11,7 +11,7 @@
 <tr><td rowspan="1" colspan="3">Success case</td></tr>
 </thead>
 <tbody>
-<tr><td>open</td><td>http://localhost:3000/FindCourse<datalist><option>http://localhost:3000/FindCourse</option></datalist></td><td></td>
+<tr><td>open</td><td>http://localhost:3000/Login<datalist><option>http://localhost:3000/Login</option></datalist></td><td></td>
 </tr>
 <tr><td>click</td><td>id=email<datalist><option>id=email</option><option>name=email</option><option>//input[@id='email']</option><option>//div[@id='root']/div/main/div/form/div/div/input</option><option>//input</option><option>css=#email</option></datalist></td><td></td>
 </tr>
@@ -23,15 +23,13 @@
 </tr>
 <tr><td>click</td><td>//div[@id='root']/div/main/div/form/a/span<datalist><option>//div[@id='root']/div/main/div/form/a/span</option><option>//a/span</option><option>css=span.MuiButton-label</option></datalist></td><td></td>
 </tr>
-<tr><td>click</td><td>//div[@id='root']/div/header/header/div[2]/div<datalist><option>//div[@id='root']/div/header/header/div[2]/div</option></datalist></td><td></td>
+<tr><td>click</td><td>//div[@id='root']/div/header/header/div/article/div[2]/div[5]/div/div/h3/a/span<datalist><option>//div[@id='root']/div/header/header/div/article/div[2]/div[5]/div/div/h3/a/span</option><option>//div[5]/div/div/h3/a/span</option><option>css=div.makeStyles-cardHeader-129.makeStyles-successCardHeader-134.makeStyles-cardHeaderStats-131.makeStyles-cardHeaderIcon-132 &gt; h3.makeStyles-cardTitle-123 &gt; a.MuiButtonBase-root.MuiButton-root.MuiButton-text &gt; span.MuiButton-label</option></datalist></td><td></td>
 </tr>
-<tr><td>click</td><td>//div[@id='root']/div/header/header/div[2]/div/a[6]/h6<datalist><option>//div[@id='root']/div/header/header/div[2]/div/a[6]/h6</option><option>//a[6]/h6</option></datalist></td><td></td>
+<tr><td>click</td><td>name=name<datalist><option>name=name</option><option>//input[@name='name']</option><option>//div[@id='root']/div/header/header/article/div/div[2]/form/div/div/input</option><option>//input</option><option>css=input[name="name"]</option></datalist></td><td></td>
 </tr>
-<tr><td>click</td><td>id=mui-component-select-Course<datalist><option>//body</option><option>css=body.vsc-initialized</option><option>id=mui-component-select-Course</option></datalist></td><td></td>
+<tr><td>type</td><td>name=name<datalist><option>name=name</option><option>//input[@name='name']</option><option>//div[@id='root']/div/header/header/article/div/div[2]/form/div/div/input</option><option>//input</option><option>css=input[name="name"]</option></datalist></td><td>COMPUTER ENGINEERING</td>
 </tr>
-<tr><td>click</td><td>//div[@id='menu-Course']/div[3]/ul/li<datalist><option>//div[@id='menu-Course']/div[3]/ul/li</option><option>//li</option><option>css=li.MuiButtonBase-root.MuiListItem-root.MuiMenuItem-root.MuiMenuItem-gutters.MuiListItem-gutters.MuiListItem-button</option></datalist></td><td></td>
-</tr>
-<tr><td>click</td><td>//div[@id='root']/div/header/header/div/article/div/div[3]/button/span<datalist><option>//div[@id='root']/div/header/header/div/article/div/div[3]/button/span</option><option>//button/span</option><option>css=span.MuiButton-label</option></datalist></td><td></td>
+<tr><td>click</td><td>//div[@id='root']/div/header/header/article/div/div[3]/button/span<datalist><option>//div[@id='root']/div/header/header/article/div/div[3]/button/span</option><option>//span</option><option>css=span.MuiButton-label</option></datalist></td><td></td>
 </tr>
 <tr><td>assertText</td><td>id=swal2-title<datalist><option>id=swal2-title</option><option>//h2[@id='swal2-title']</option><option>//h2</option><option>css=#swal2-title</option></datalist></td><td>พบหลักสูตรที่คุณค้นหา</td>
 </tr>
@@ -41,7 +39,7 @@
 <tr><td rowspan="1" colspan="3">Failure Case</td></tr>
 </thead>
 <tbody>
-<tr><td>open</td><td>http://localhost:3000/<datalist><option>http://localhost:3000/</option></datalist></td><td></td>
+<tr><td>open</td><td>http://localhost:3000/Login<datalist><option>http://localhost:3000/Login</option></datalist></td><td></td>
 </tr>
 <tr><td>click</td><td>id=email<datalist><option>id=email</option><option>name=email</option><option>//input[@id='email']</option><option>//div[@id='root']/div/main/div/form/div/div/input</option><option>//input</option><option>css=#email</option></datalist></td><td></td>
 </tr>
@@ -53,15 +51,13 @@
 </tr>
 <tr><td>click</td><td>//div[@id='root']/div/main/div/form/a/span<datalist><option>//div[@id='root']/div/main/div/form/a/span</option><option>//a/span</option><option>css=span.MuiButton-label</option></datalist></td><td></td>
 </tr>
-<tr><td>click</td><td>//div[@id='root']/div/header/header/div[2]/div<datalist><option>//div[@id='root']/div/header/header/div[2]/div</option></datalist></td><td></td>
+<tr><td>click</td><td>link=Search Course<datalist><option>link=Search Course</option><option>//div[@id='root']/div/header/header/div/article/div[2]/div[5]/div/div/h3/a</option><option>//a[contains(@href, '/FindCourse')]</option><option>//div[5]/div/div/h3/a</option><option>css=div.makeStyles-cardHeader-134.makeStyles-successCardHeader-139.makeStyles-cardHeaderStats-136.makeStyles-cardHeaderIcon-137 &gt; h3.makeStyles-cardTitle-128 &gt; a.MuiButtonBase-root.MuiButton-root.MuiButton-text</option></datalist></td><td></td>
 </tr>
-<tr><td>click</td><td>//div[@id='root']/div/header/header/div[2]/div/a[6]/h6<datalist><option>//div[@id='root']/div/header/header/div[2]/div/a[6]/h6</option><option>//a[6]/h6</option></datalist></td><td></td>
+<tr><td>click</td><td>name=name<datalist><option>name=name</option><option>//input[@name='name']</option><option>//div[@id='root']/div/header/header/article/div/div[2]/form/div/div/input</option><option>//input</option><option>css=input[name="name"]</option></datalist></td><td></td>
 </tr>
-<tr><td>click</td><td>id=mui-component-select-Course<datalist><option>//div[@id='menu-Course']/div[3]/ul/li[2]</option><option>//li[2]</option><option>id=mui-component-select-Course</option></datalist></td><td></td>
+<tr><td>type</td><td>name=name<datalist><option>name=name</option><option>//input[@name='name']</option><option>//div[@id='root']/div/header/header/article/div/div[2]/form/div/div/input</option><option>//input</option><option>css=input[name="name"]</option></datalist></td><td>สายขวัญ</td>
 </tr>
-<tr><td>click</td><td>//div[@id='menu-Course']/div<datalist><option>//div[@id='menu-Course']/div</option><option>//div[2]/div</option><option>css=#menu-Course &gt; div</option></datalist></td><td></td>
-</tr>
-<tr><td>click</td><td>//div[@id='root']/div/header/header/div/article/div/div[3]/button/span<datalist><option>//div[@id='root']/div/header/header/div/article/div/div[3]/button/span</option><option>//button/span</option><option>css=span.MuiButton-label</option></datalist></td><td></td>
+<tr><td>click</td><td>//div[@id='root']/div/header/header/article/div/div[3]/button/span<datalist><option>//div[@id='root']/div/header/header/article/div/div[3]/button/span</option><option>//span</option><option>css=span.MuiButton-label</option></datalist></td><td></td>
 </tr>
 <tr><td>assertText</td><td>id=swal2-title<datalist><option>id=swal2-title</option><option>//h2[@id='swal2-title']</option><option>//h2</option><option>css=#swal2-title</option></datalist></td><td>ไม่พบหลักสูตรที่คุณค้นหา</td>
 </tr>
